<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">1, 2, Trip!</string>
    <string name="app_description">Your favorite app for creating and managing group trips</string>
    <string name="app_version" translatable="false">1.1.0</string>
    <string name="logo">Application logo</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="or">OR</string>
    <string name="google_login">Login with Google</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password_text">Enter the email address associated with your account and we will send you a link to reset your password.</string>
    <string name="check_login_data_message">Field(s) not valid!</string>
    <string name="reset_password_mail_sent">Password reset e-mail has been sent!</string>
    <string name="trip_map_description">Map of the trip</string>
    <string name="trip_fab_label">Add Activity</string>
    <string name="coming_trips">Coming trips</string>
    <string name="past_trips">Past trips</string>
    <string name="new_trip_fab_text">New Trip</string>
    <string name="new_trip_fab_desc">Create a new trip</string>
    <string name="coming_trips_title_multiple" tools:ignore="PluralsCandidate">You have %1$d coming trips 🛫</string>
    <string name="coming_trips_title_single">You have one coming trip 🛫</string>
    <string name="no_trips_added">You haven\'t added a trip yet!</string>
    <string name="no_coming_trips">You haven\'t coming trips!</string>
    <string name="no_past_trips">You haven\'t past trips!</string>
    <string name="more_button_text">…more</string>
    <string name="past_trips_title">Past trips ⌛</string>
    <string name="no_activities_added">Currently there are no activities yet.</string>
    <string name="start_adding_button_text">Start adding!</string>
    <string name="default_trip_title">Awesome new trip</string>
    <string name="default_activity_name">Activity</string>
    <string name="attachments_present">There are attachments for this activity</string>
    <string name="no_trips_description">There are no trips in this section</string>
    <string name="share_trip_button_description">Share this trip!</string>
    <string name="participants_description">Trip participants</string>
    <string name="loading_description">Loading…</string>
    <string name="more_button_description">See more activities</string>
    <string name="share_trip_text_coming">See the fantastic places I am going to visit! I just planned the entire trip with 1, 2, Trip app. Download it now!</string>
    <string name="share_trip_text_past">See the fantastic places I visited! I have planned the entire trip using the 1, 2, Trip app. Download it now!</string>
    <string name="share_trip_using">Share this trip using…</string>
    <string name="trip_delete_confirmation">Are you sure you want to delete this trip? This action is irreversible.</string>
    <string name="trip_delete_confirmation_title">Delete trip</string>
    <string name="trip_delete_confirmation_positive">Delete</string>
    <string name="trip_delete_confirmation_negative">@android:string/cancel</string>
    <string name="trip_title_change">New name:</string>
    <string name="trip_title_change_title">Change trip name</string>
    <string name="trip_title_change_positive">Change</string>
    <string name="trip_title_change_negative">@android:string/cancel</string>
    <string name="trip_description_change">Description:</string>
    <string name="trip_description_title">Change trip description</string>
    <string name="trip_description_positive">Change</string>
    <string name="trip_description_negative">@android:string/cancel</string>
    <string name="trip_new_title">Create new trip</string>
    <string name="trip_new_descr">New trip name:</string>
    <string name="trip_new_hint">Name</string>
    <string name="trip_new_positive">Confirm</string>
    <string name="trip_new_negative">@android:string/cancel</string>
    <string name="trip_logo_upload_failure">Something went wrong during uploading! Please try again</string>
    <string name="trip_logo_download_failure">Something went wrong during downloading! Please try again</string>
    <string name="trip_logo_pick_photo">Pick a photo for your trip</string>
    <string name="trip_participants_plural" tools:ignore="PluralsCandidate">%1$d participants</string>
    <string name="trip_participants_singular">1 participant</string>
    <string name="trip_activities_plural" tools:ignore="PluralsCandidate">%1$d activities added</string>
    <string name="trip_activities_singular">1 activity added</string>
    <string name="trip_add_description">Add description…</string>
    <string name="trip_participants_list">Participants:</string>
    <string name="add_participants">Add participants</string>
    <string name="remove_participant">Remove participant</string>
    <string name="trip_join_title">Join trip</string>
    <string name="trip_join_message">Would you like to join this trip?</string>
    <string name="trip_join_confirmation_positive">Join</string>
    <string name="trip_join_confirmation_negative">@android:string/cancel</string>
    <string name="trip_join_share_message">Join my new trip in 1, 2, Trip! by clicking this link:</string>
    <string name="share_url">Share the URL</string>
    <string name="trip_delete_participant">Delete participant</string>
    <string name="trip_delete_participant_message">Are you sure you want to delete this participant from the trip?</string>
    <string name="trip_delete_participant_positive">Delete</string>
    <string name="trip_delete_participant_negative">@android:string/cancel</string>
    <string name="trip_leave">Leave trip</string>
    <string name="trip_leave_message">Are you sure you want to leave this trip?</string>
    <string name="trip_leave_positive">Leave</string>
    <string name="trip_leave_negative">@android:string/cancel</string>
    <string name="activity_descr_title">Description</string>
    <string name="activity_participant_title">Participants</string>
    <string name="activity_not_participants">Not participating</string>
    <string name="activity_delete_confirmation">Are you sure you want to delete this activity? This action is irreversible.</string>
    <string name="activity_delete_confirmation_title">Delete activity</string>
    <string name="activity_delete_confirmation_positive">Delete</string>
    <string name="activity_delete_confirmation_negative">@android:string/cancel</string>
    <string name="activity_title_change">New name:</string>
    <string name="activity_title_change_title">Change activity name</string>
    <string name="activity_title_change_positive">Change</string>
    <string name="activity_title_change_negative">@android:string/cancel</string>
    <string name="activity_new_title">Create new activity</string>
    <string name="activity_new_title_descr">Name:</string>
    <string name="activity_new_title_hint">Name</string>
    <string name="activity_new_confirmation_positive">Confirm</string>
    <string name="activity_new_confirmation_negative">@android:string/cancel</string>
    <string name="activity_new_moving">Is this a journey? (i.e. flight)</string>
    <string name="activity_new_when_description">Choose the date or dates for the activity</string>
    <string name="activity_new_where_description">Choose the location or locations of the activity</string>
    <string name="activity_new_participant_description">Pick the participants of the activity</string>
    <string name="activity_new_when_arrow_description">Second date:</string>
    <string name="activity_new_where_arrow_description">Second location:</string>
    <string name="activity_new_descr_description">Write the description of the activity</string>
    <string name="activity_when_description">Edit the date or dates for the activity</string>
    <string name="activity_where_description">Edit the location or locations of the activity</string>
    <string name="activity_participant_description">Edit the participants of the activity</string>
    <string name="activity_when_arrow_description">Second date:</string>
    <string name="activity_where_arrow_description">Second location:</string>
    <string name="activity_descr_description">Edit the description of the activity</string>
    <string name="activity_drag_button">Drag</string>
    <string name="participant_item_description">Participant</string>
    <string name="activity_edit_button">Edit</string>
    <string name="activity_confirm_button">Confirm</string>
    <string name="activity_locate_button">Locate on the map</string>
    <string name="activity_navigate_button">Navigate</string>
    <string name="activity_add_to_calendar_button">Add to calendar</string>
    <string name="activity_departure">departure</string>
    <string name="activity_arrival">arrival</string>
    <string name="accountManagement">Account management</string>
    <string name="editAccount">Edit account </string>
    <string name="deleteAccount">Delete account</string>
    <string name="logout">Logout</string>
    <string name="name_surname">Name Surname</string>
    <string name="editProfileImage">Edit profile image</string>
    <string name="editProfileButton">Apply changes</string>
    <string name="profile_pick_photo">Pick a profile image</string>
    <string name="made_by">Made with 💛 by:</string>
    <string name="need_help">Need help?</string>
    <string name="app_email" translatable="false">onetwotripapp@gmail.com</string>
    <string name="contribute">Contribute on</string>
    <string name="github_link" translatable="false">https://github.com/AlePucci/one-two-trip</string>
    <string name="version">Version:</string>
    <string name="github" translatable="false">Github</string>
    <string name="contact_email_description">Contact us at this email address</string>
    <string name="developer_pucci" translatable="false">Alessandro Pucci (869177)</string>
    <string name="developer_ruiz" translatable="false">Matias Aldo Ruiz (869139)</string>
    <string name="developer_disaro" translatable="false">Alessio Disarò (866247)</string>
    <string name="developer_saad" translatable="false">Ebraam Saad (856096)</string>
    <string name="settings_title">Settings</string>
    <string name="notifications_switch">Notifications</string>
    <string name="coming_trip_notifications_title">Remind me of a coming trip:</string>
    <string name="activity_notifications_title">Remind me of an activity starting soon:</string>
    <string name="half_hour">30m</string>
    <string name="one_hour">1h</string>
    <string name="two_hours">2h</string>
    <string name="three_hours">3h</string>
    <string name="twelve_hours">12h</string>
    <string name="one_day">1d</string>
    <string name="two_days">2d</string>
    <string name="settings_saved">Settings saved successfully</string>
    <string name="save">Save</string>
    <string name="notifications_disabled">Notifications are disabled</string>
    <string name="notifications_description">Notifications switch</string>
    <string name="settings_save_description">Save settings</string>
    <string name="theme">Theme:</string>
    <string name="theme_system">System</string>
    <string name="theme_light" translatable="false">☀</string>
    <string name="theme_dark" translatable="false">🌙</string>
    <string name="menu_home">Home</string>
    <string name="activity_when_title">When</string>
</resources>