<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth="wrap_content" />

        <TextView
            android:id="@+id/made_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/made_by"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:layout_constraintWidth="wrap_content" />

        <TextView
            android:id="@+id/dev_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/developer_pucci"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/made_by"
            app:layout_constraintWidth="wrap_content" />

        <TextView
            android:id="@+id/dev_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/developer_ruiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dev_1"
            app:layout_constraintWidth="wrap_content" />

        <TextView
            android:id="@+id/dev_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/developer_disaro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dev_2"
            app:layout_constraintWidth="wrap_content" />

        <TextView
            android:id="@+id/dev_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/developer_saad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dev_3"
            app:layout_constraintWidth="wrap_content" />

        <LinearLayout
            android:id="@+id/version_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dev_4">

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/version"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contribute_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/version_layout"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/contribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/contribute"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/github"
                android:layout_width="16sp"
                android:layout_height="16sp"
                android:contentDescription="@string/github"
                android:src="@drawable/github" />
        </LinearLayout>

        <TextView
            android:id="@+id/need_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/need_help"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contribute_layout" />

        <TextView
            android:id="@+id/app_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:autoLink="email"
            android:contentDescription="@string/contact_email_description"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/app_email"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/need_help" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
