<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_when_card"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.trip.activity.ActivityDateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_when_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/activity_when_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/activity_when_description"
            android:src="@drawable/ic_baseline_calendar_month_24"
            app:layout_constraintBottom_toBottomOf="@+id/activity_when_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_when_title"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/activity_when_title"
            app:layout_constraintStart_toEndOf="@+id/activity_when_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_when1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_when_title"
            tools:text="14 feb 2022 9:30" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_when_save1"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/activity_add_to_calendar_button"
            app:icon="@drawable/ic_baseline_calendar_addon_24"
            app:layout_constraintBottom_toBottomOf="@+id/activity_when1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/activity_when1" />

        <ImageView
            android:id="@+id/activity_when_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/activity_when_arrow_description"
            android:src="@drawable/ic_baseline_arrow_downward_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_when1" />

        <TextView
            android:id="@+id/activity_when2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_when_arrow"
            tools:text="14 feb 2022 11:30" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_when_edit"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/activity_edit_button"
            app:icon="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_when2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
